(lang dune 3.6)

(name type_system_implementations)
(using menhir 2.1)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name type_system_implementations)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune menhir unionFind)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
